# azure-devops-rust-api

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  SUPPORT.md  build.ps1  build.sh  publish.ps1  publish.sh
.github/: dependabot.yml
.github/workflows/: build.yml  rust.yml
autorust/: Cargo.toml  README.md  autorust.toml
autorust/ado-autorust/: Cargo.toml
autorust/ado-autorust/src/: main.rs
autorust/codegen/: Cargo.toml  autorust.toml
autorust/codegen/src/: Cargo.toml  autorust_toml.rs  cargo_toml.rs  codegen.rs  codegen_models.rs  codegen_operations.rs  config_parser.rs  crates.rs  doc_comment.rs  error.rs  gen.rs  identifier.rs  io.rs  jinja.rs  lib.rs  lib_rs.rs  path.rs  readme_md.rs  spec.rs  status_codes.rs
autorust/codegen/src/codegen_operations/: create_client_and_builder.rs  function_code.rs  function_params.rs  new_request_code.rs  operation_module.rs  operations.rs  request_builder_into_future.rs  request_builder_send.rs  request_builder_setter.rs  request_builder_struct.rs  response_code.rs  response_headers.rs  set_request_code.rs  set_request_param_code.rs  web_operation_gen.rs
autorust/codegen/tests/: azure_rest_api_specs.rs
autorust/openapi/: Cargo.toml
autorust/openapi/examples/: operation_ids.rs  printer.rs
autorust/openapi/src/: header.rs  info.rs  lib.rs  openapi.rs  operation.rs  parameter.rs  reference.rs  schema.rs  security.rs  status_code.rs
azure-devops-rust-api/: Cargo.toml  README.md
azure-devops-rust-api/examples/: pipelines.rs  repo_list.rs  service_endpoint.rs
azure-devops-rust-api/src/accounts/: models.rs  operations.rs
azure-devops-rust-api/src/artifacts/: models.rs  operations.rs
azure-devops-rust-api/src/artifacts_package_types/: models.rs  operations.rs
azure-devops-rust-api/src/audit/: operations.rs
azure-devops-rust-api/src/clt/: mod.rs  models.rs  operations.rs
azure-devops-rust-api/src/core/: models.rs
azure-devops-rust-api/src/dashboard/: models.rs  operations.rs
azure_devops_rust_api/: .gitignore  Cargo.toml  README.md  run_all_examples
azure_devops_rust_api/examples/: artifact_provenance.rs  artifacts_list.rs  build_get.rs  build_list.rs  build_list_continuation_token.rs  build_list_sync.rs  build_source_providers_list.rs  client_pipeline_policy.rs  core_org_projects.rs  core_org_teams.rs  core_project_teams.rs  distributed_task.rs  download_artifact.rs  extension_management_list.rs  get_commits.rs  git_commit_changes.rs  git_diff_files_between_base_and_target_branch.rs  git_items_get.rs  git_items_get_items_batch.rs  git_items_list.rs  git_policy_config_list.rs  git_pr_commits.rs  git_pr_create.rs  git_pr_files_changed.rs  git_pr_work_items.rs  git_push.rs  git_repo_download_zip.rs  git_repo_get.rs  git_repo_get_raw_rsp.rs  git_repo_list.rs  graph_query.rs  hooks_list.rs  ims_query.rs  member_entitlement_management.rs  permissions_report.rs  pipeline_preview.rs  pipelines.rs  policy.rs  release.rs  release_get_release.rs  (+20 more)
azure_devops_rust_api/examples/utils/: mod.rs
azure_devops_rust_api/src/: auth.rs  date_time.rs  headers.rs  lib.rs  serde.rs  telemetry.rs
azure_devops_rust_api/src/accounts/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/approvals_and_checks/: mod.rs  models.rs
azure_devops_rust_api/src/artifacts/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/artifacts_download/: decompress.rs  mod.rs
azure_devops_rust_api/src/artifacts_package_types/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/audit/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/clt/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/core/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/dashboard/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/distributed_task/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/extension_management/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/favorite/: mod.rs  models.rs
azure_devops_rust_api/src/git/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/graph/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/hooks/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/ims/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/member_entitlement_management/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/operations/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/permissions_report/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/pipelines/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/policy/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/processadmin/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/processes/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/profile/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/release/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/search/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/security/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/security_roles/: mod.rs  models.rs
azure_devops_rust_api/src/service_endpoint/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/status/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/symbol/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/test/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/test_plan/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/test_results/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/tfvc/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/token_admin/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/tokens/: mod.rs  models.rs
azure_devops_rust_api/src/wiki/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/wit/: mod.rs  models.rs  operations.rs
azure_devops_rust_api/src/work/: mod.rs  models.rs  operations.rs
vsts-api-patcher/: Cargo.toml
vsts-api-patcher/src/: main.rs  patcher.rs
(+39 files in other folders)
