# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "azure_devops_rust_api"
version = "0.3.0"
edition = "2021"
authors = ["John Batty <johnbatty@microsoft.com>"]
description = "Rust API library for Azure DevOps"
documentation = "https://docs.rs/azure_devops_rust_api"
homepage = "https://github.com/microsoft/azure-devops-rust-api"
repository = "https://github.com/microsoft/azure-devops-rust-api"
keywords = ["azure", "devops", "api", "sdk", "ado"]
license = "MIT"
readme = "README.md"
publish = ["crates-io"]

[lib]
doctest = false

[dependencies]
azure_core = { version = "0.2", default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
thiserror = "1.0"
http = "0.2"
url = "2.2"
futures = "0.3"
base64 = "0.13"

[dev-dependencies]
azure_identity = "0.3"
tokio = { version = "1.0", features = ["full"] }

[features]
accounts = []
artifacts = []
artifacts_package_types = []
audit = []
build = []
clt = []
core = []
dashboard = []
distributed_task = []
extension_management = []
git = []
graph = []
hooks = []
ims = []
member_entitlement_management = []
operations = []
permissions_report = []
pipelines = []
policy = []
processadmin = []
processes = []
profile = []
release = []
search = []
security = []
service_endpoint = []
status = []
symbol = []
test = []
test_plan = []
test_results = []
tfvc = []
token_admin = []
wiki = []
wit = []
work = []

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "git_repo_get"
required-features = ["git"]

[[example]]
name = "git_repo_list"
required-features = ["git"]

[[example]]
name = "pipelines"
required-features = ["pipelines"]

[[example]]
name = "service_endpoint"
required-features = ["service_endpoint"]

[[example]]
name = "graph_query"
required-features = ["graph"]

[[example]]
name = "build_list"
required-features = ["build"]
