# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "azure_devops_rust_api"
version = "0.32.0"
edition = "2021"
authors = ["John Batty <johnbatty@microsoft.com>"]
description = "Rust API library for Azure DevOps"
documentation = "https://docs.rs/azure_devops_rust_api"
homepage = "https://github.com/microsoft/azure-devops-rust-api"
repository = "https://github.com/microsoft/azure-devops-rust-api"
keywords = ["azure", "devops", "api", "sdk", "ado"]
categories = ["api-bindings"]
license = "MIT"
readme = "README.md"
publish = ["crates-io"]
rust-version = "1.80.0"

[lib]
doctest = false

[dependencies]
azure_core = { version = "0.28", default-features = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures = "0.3"
base64 = "0.22"
time = "0.3"
async-trait = "0.1"
tracing = "0.1"
once_cell = "1"

# uuid is an indirect dependency that fails to build on wasm32.
# See: https://github.com/uuid-rs/uuid/issues/802
# As a workaround, include it directly and enable the "js" feature.
[target.wasm32-unknown-unknown.dependencies]
uuid = { version = "1", features = ["serde", "v4", "js"] }

[dev-dependencies]
azure_identity = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing-subscriber = "0.3"

[features]
default = ["reqwest"]
reqwest = ["azure_core/reqwest"]
#reqwest_rustls = ["azure_core/reqwest_rustls"]
no-default-tag = []
accounts = []
approvals_and_checks = []
artifacts = []
artifacts_package_types = []
audit = []
build = []
core = []
dashboard = []
distributed_task = []
extension_management = []
favorite = []
git = []
graph = []
hooks = []
ims = []
member_entitlement_management = []
operations = []
permissions_report = []
pipelines = []
policy = []
processadmin = []
processes = []
profile = []
release = []
search = []
security = []
security_roles = []
service_endpoint = []
status = []
symbol = []
test = []
test_plan = []
test_results = []
tfvc = []
token_admin = []
tokens = []
wiki = []
wit = []
work = []

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "artifact_provenance"
required-features = ["artifacts"]

[[example]]
name = "artifacts_list"
required-features = ["artifacts"]

[[example]]
name = "core_org_projects"
required-features = ["core"]

[[example]]
name = "core_project_teams"
required-features = ["core"]

[[example]]
name = "distributed_task"
required-features = ["distributed_task"]

[[example]]
name = "extension_management_list"
required-features = ["extension_management"]

[[example]]
name = "git_repo_get"
required-features = ["git"]

[[example]]
name = "git_repo_list"
required-features = ["git"]

[[example]]
name = "git_repo_get_raw_rsp"
required-features = ["git"]

[[example]]
name = "git_items_list"
required-features = ["git"]

[[example]]
name = "git_items_get"
required-features = ["git"]

[[example]]
name = "git_items_get_items_batch"
required-features = ["git"]

[[example]]
name = "git_commit_changes"
required-features = ["git"]

[[example]]
name = "git_policy_config_list"
required-features = ["git"]

[[example]]
name = "git_pr_create"
required-features = ["git"]

[[example]]
name = "git_pr_commits"
required-features = ["git"]

[[example]]
name = "git_pr_work_items"
required-features = ["git"]

[[example]]
name = "git_pr_files_changed"
required-features = ["git"]

[[example]]
name = "git_push"
required-features = ["git"]

[[example]]
name = "git_repo_download_zip"
required-features = ["git"]

[[example]]
name = "git_diff_files_between_base_and_target_branch"
required-features = ["git"]

[[example]]
name = "hooks_list"
required-features = ["hooks"]

[[example]]
name = "ims_query"
required-features = ["ims"]

[[example]]
name = "permissions_report"
required-features = ["permissions_report"]

[[example]]
name = "pipelines"
required-features = ["pipelines"]

[[example]]
name = "pipeline_preview"
required-features = ["pipelines"]

[[example]]
name = "release"
required-features = ["release"]

[[example]]
name = "release_get_release"
required-features = ["release"]

[[example]]
name = "service_endpoint"
required-features = ["service_endpoint"]

[[example]]
name = "search_code"
required-features = ["search"]

[[example]]
name = "search_package"
required-features = ["search"]

[[example]]
name = "search_repositories"
required-features = ["search"]

[[example]]
name = "search_work_item"
required-features = ["search"]

[[example]]
name = "test_runs_list"
required-features = ["test"]

[[example]]
name = "test_plan"
required-features = ["test_plan"]

[[example]]
name = "graph_query"
required-features = ["graph"]

[[example]]
name = "build_get"
required-features = ["build"]

[[example]]
name = "build_list"
required-features = ["build"]

[[example]]
name = "build_list_sync"
required-features = ["build"]

[[example]]
name = "build_list_continuation_token"
required-features = ["build"]

[[example]]
name = "build_source_providers_list"
required-features = ["build"]

[[example]]
name = "status"
required-features = ["status"]

[[example]]
name = "telemetry_git_repo_get"
required-features = ["git"]

[[example]]
name = "wiki_pages_create_or_update"
required-features = ["wiki"]

[[example]]
name = "wit_wiql"
required-features = ["wit"]

[[example]]
name = "wit_work_item_create"
required-features = ["wit"]

[[example]]
name = "wit_work_item_get"
required-features = ["wit"]

[[example]]
name = "wit_work_item_queries"
required-features = ["wit"]

[[example]]
name = "work"
required-features = ["work"]

[[example]]
name = "policy"
required-features = ["policy"]

[[example]]
name = "release_logs"
required-features = ["release"]

[[example]]
name = "member_entitlement_management"
required-features = ["member_entitlement_management"]
