# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "vsts-api-patcher"
version = "0.1.0"
edition = "2021"
authors = ["John Batty <johnbatty@microsoft.com>"]
description = "vsts-rest-api-specs patcher"
documentation = "https://docs.rs/azure_devops_rust_api"
homepage = "https://github.com/microsoft/azure-devops-rust-api"
repository = "https://github.com/microsoft/azure-devops-rust-api"
keywords = ["azure", "devops", "vsts-rest-api-specs", "ado", "patcher"]
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
json = "0.12"
walkdir = "2"
regex = "1"
