[package]
name = "autorust_codegen"
version = "0.1.0"
authors = ["Cameron Taggart <cameron.taggart@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

[lib]

[[bin]]
name = "gen_ado"

[dependencies]
autorust_openapi = { path = "../openapi" }
quote = "1.0"
proc-macro2 = { version = "1.0", default-features = false }
serde_json = "1.0"
serde_yaml = "0.9"
heck = "0.4"
regex = "1.8"
indexmap = { version = "1.9", features = ["serde-1"] }
path_abs = "0.5"
comrak = "0.15"
serde = "1.0"
http-types = "2.12"
once_cell = "1.17"
syn = { version = "2.0", features = ["parsing"] }
camino = "1.1"
askama = "0.12"
toml = "0.5"
qstring = "0.7"

[dev-dependencies]
thiserror = "1.0"
