[package]
name = "autorust_codegen"
version = "0.1.0"
authors = ["Cameron Taggart <cameron.taggart@gmail.com>"]
edition = "2018"
publish = false

[lib]

[dependencies]
autorust_openapi = { path = "../openapi" }
quote = "1"
proc-macro2 = { version = "1", default-features = false }
serde_json = "1"
serde_yaml = "0.9"
heck = "0.5"
regex = "1"
indexmap = { version = "2", features = ["serde"] }
path_abs = "0.5"
comrak = "0.26"
serde = "1"
http-types = "2"
once_cell = "1"
syn = { version = "2", features = ["parsing"] }
camino = "1"
askama = "0.12"
toml = "0.8"
qstring = "0.7"
cargo_toml = "0.20"

[dev-dependencies]
thiserror = "1"
crates_io_api = "0.11"

[lints]
workspace = true

[features]
# Use the `azure_devops` feature to enable Azure DevOps specific modifications to the autorust codegen
default = ["azure_devops"]
azure_devops = []
